--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -37,7 +39,10 @@
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
         <activity android:name=".notes.PdfView" />
         <activity android:name=".notes.AdminUpload" />
-        <activity android:name=".locker.Locker" android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+        <activity
+            android:name=".locker.Locker"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+        <activity android:name=".hisaab.HisaabAnalytics"></activity>
     </application>
 
 </manifest>
